--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Wartung</title>
 </head>
 <body>
@@ -61,6 +61,39 @@
                         (Dacă vrei să afli asta, îți vom povesti mai târziu, dar mai întâi să vorbim despre ce contează cu adevărat
                         pentru tine.)
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="third-section">
+        <div class="third-section-group">
+            <h2>Mentenanța unei fabrici sau companii este un lucru serios, nu bazarul din Istanbul</h2>
+            <div class="third-section-group-first-text-part">       
+                <p>De acord? De acord</p>
+                <p>Dacă ai ajuns până aici, s-ar putea ca ceea ce avem să îți spunem să te intereseze.</p>
+                <strong>Ca șef de mentenanță sau achiziții ar trebui să știi două lucruri:</strong>
+            </div>
+            <div class="third-section-group-first-card-part">
+                <div class="third-section-f-card-part cardOne">
+                    Peste 80% din companii cheltuiesc pe mentenanță și curățenie mai mult decât cred (în medie cu 30% mai mult).
+                </div>
+                <div class="third-section-f-card-part cardTwo">
+                    Chiar și companiile care au bugete stabilite nu calculează pierderea de venituri cauzate de opririle neplanificate
+                    pentru reparații și curățenie
+                </div>
+            </div>
+            <div class="third-section-group-second-text-part">
+                <strong><p>Asta înseamnă că făcând ceea ce ați făcut până acum, aproape sigur vă costă scump.</p></strong>
+                <p>Și este posibil să te întrebi "cu ce mă puteți ajuta voi?"</p>
+            </div>
+            <div class="third-section-group-second-card-part">
+                <div class="third-section-s-card-part cardOne"> 
+                    <p>La <strong>Wartung</strong> avem un catalog de soluții adaptate pentru companii, pe care îl poți vedea apăsând pe buton.</p>
+                    <button>Descarcă Catalog</button>
+                </div>
+                <div class="third-section-f-card-part cardTwo">
+                    <p>Și toate produsele noastre sunt certificate, poți verifica chiar tu apăsând pe buton.</p>
+                    <button>Vezi Certificatele</button>
                 </div>
             </div>
         </div>
